# fdd

./: .gitignore  CMakeLists.txt  README  README.md
include/: debug.h  fd.h  fdcommon.h  fdd.h  fddcommon.h  internal.h
lib/: fd.c  fdd.c
src/: fdd.c  fddaemon.c  test.c
